--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -18,6 +18,8 @@
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:navigationIcon="@drawable/icon_back"
+            app:navigationIconTint="@color/primaryColor"
             android:backgroundTint="@color/contentColor"
             app:titleTextColor="@color/white"
             app:title="Edit Profile"
