--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -183,35 +183,32 @@
 
 
 <!--       Misalnya belum aktifin biometric ini visiblenya dimatiin aja-->
-            <androidx.cardview.widget.CardView
-                android:id="@+id/btnBiometric"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                app:cardCornerRadius="25dp"
-                app:cardElevation="0dp"
-                android:foreground="?attr/selectableItemBackground">
+<!--            <androidx.cardview.widget.CardView-->
+<!--                android:id="@+id/btnBiometric"-->
+<!--                android:layout_width="48dp"-->
+<!--                android:layout_height="48dp"-->
+<!--                android:layout_marginStart="8dp"-->
+<!--                android:layout_marginTop="8dp"-->
+<!--                android:layout_marginBottom="8dp"-->
+<!--                app:cardCornerRadius="25dp"-->
+<!--                app:cardElevation="0dp"-->
+<!--                android:foreground="?attr/selectableItemBackground">-->
 
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="48dp"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/cardview_border_no_padding"
-                    android:gravity="center">
+<!--                <androidx.appcompat.widget.LinearLayoutCompat-->
+<!--                    android:layout_width="48dp"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:background="@drawable/cardview_border_no_padding"-->
+<!--                    android:gravity="center">-->
 
-                    <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:src="@drawable/icon_fingerprint"
-                        app:tint="@color/white" />
+<!--                    <ImageView-->
+<!--                        android:layout_width="24dp"-->
+<!--                        android:layout_height="24dp"-->
+<!--                        android:src="@drawable/icon_fingerprint"-->
+<!--                        app:tint="@color/white" />-->
 
-                </androidx.appcompat.widget.LinearLayoutCompat>
-            </androidx.cardview.widget.CardView>
+<!--                </androidx.appcompat.widget.LinearLayoutCompat>-->
+<!--            </androidx.cardview.widget.CardView>-->
         </GridLayout>
-
-
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
