--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -74,6 +74,7 @@
                     android:layout_marginEnd="16dp"
                     android:hint="First Name"
                     android:imeOptions="actionNext"
+                    android:focusable="false"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -84,6 +85,7 @@
                     style="@style/EditText"
                     android:layout_width="0dp"
                     android:layout_height="48dp"
+                    android:focusable="false"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
@@ -105,6 +107,7 @@
                     android:hint="Email"
                     android:imeOptions="actionNext"
                     android:textSize="14sp"
+                    android:focusable="false"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/etLastName" />
@@ -118,6 +121,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:hint="Mobile"
+                    android:focusable="false"
                     android:imeOptions="actionNext"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
