--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,8 +35,9 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
             android:hint="Email"
+            android:focusable="false"
             android:imeOptions="actionNext"
-            android:textSize="14dp"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewlogin" />
@@ -60,10 +61,13 @@
 
             <com.example.capstoneproject.ui.customView.passwordEditText
                 android:id="@+id/etPassword"
+                android:focusable="false"
                 style="@style/EditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/edit_text_bg"
+                android:imeOptions="actionNext"
+                android:textSize="14sp"
                 android:hint="Password"
                 android:inputType="textPassword" />
 
@@ -183,31 +187,31 @@
 
 
 <!--       Misalnya belum aktifin biometric ini visiblenya dimatiin aja-->
-<!--            <androidx.cardview.widget.CardView-->
-<!--                android:id="@+id/btnBiometric"-->
-<!--                android:layout_width="48dp"-->
-<!--                android:layout_height="48dp"-->
-<!--                android:layout_marginStart="8dp"-->
-<!--                android:layout_marginTop="8dp"-->
-<!--                android:layout_marginBottom="8dp"-->
-<!--                app:cardCornerRadius="25dp"-->
-<!--                app:cardElevation="0dp"-->
-<!--                android:foreground="?attr/selectableItemBackground">-->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/btnBiometric"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                app:cardCornerRadius="25dp"
+                app:cardElevation="0dp"
+                android:foreground="?attr/selectableItemBackground">
 
-<!--                <androidx.appcompat.widget.LinearLayoutCompat-->
-<!--                    android:layout_width="48dp"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:background="@drawable/cardview_border_no_padding"-->
-<!--                    android:gravity="center">-->
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="48dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/cardview_border_no_padding"
+                    android:gravity="center">
 
-<!--                    <ImageView-->
-<!--                        android:layout_width="24dp"-->
-<!--                        android:layout_height="24dp"-->
-<!--                        android:src="@drawable/icon_fingerprint"-->
-<!--                        app:tint="@color/white" />-->
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/icon_fingerprint"
+                        app:tint="@color/white" />
 
-<!--                </androidx.appcompat.widget.LinearLayoutCompat>-->
-<!--            </androidx.cardview.widget.CardView>-->
+                </androidx.appcompat.widget.LinearLayoutCompat>
+            </androidx.cardview.widget.CardView>
         </GridLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
