--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.splash.SplashActivity"
-    android:background="@drawable/ic_splash">
+    android:background="@color/darkBlue">
 
+    <!--    android:background="@drawable/ic_splash"-->
 </androidx.constraintlayout.widget.ConstraintLayout>
