--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,17 +11,17 @@
     <color name="lightPrimaryColor">@color/lightGray</color>
     <color name="lightSecondaryColor">@color/lightGray3</color>
     <style name="editTextStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-<!--        <item name="android:textColorHint">@color/secPrimary</item>-->
-<!--        <item name="hintTextColor">@color/secondaryColor</item>-->
-<!--        <item name="boxCornerRadiusTopStart">10dp</item>-->
-<!--        <item name="boxCornerRadiusTopEnd">10dp</item>-->
-<!--        <item name="boxCornerRadiusBottomStart">10dp</item>-->
-<!--        <item name="boxCornerRadiusBottomEnd">10dp</item>-->
-<!--        <item name="boxStrokeColor">@color/secondaryColor</item>-->
-<!--        <item name="boxStrokeWidth">2dp</item>-->
-<!--        <item name="android:textColor">@color/secondaryColor</item>-->
-<!--        <item name="boxBackgroundColor">@color/primaryColor</item>-->
-<!--        <item name="passwordToggleTint">@color/secondaryColor</item>-->
-<!--        <item name="hintAnimationEnabled">false</item>-->
+        <item name="android:textColorHint">@color/secPrimary</item>
+        <item name="hintTextColor">@color/secondaryColor</item>
+        <item name="boxCornerRadiusTopStart">10dp</item>
+        <item name="boxCornerRadiusTopEnd">10dp</item>
+        <item name="boxCornerRadiusBottomStart">10dp</item>
+        <item name="boxCornerRadiusBottomEnd">10dp</item>
+        <item name="boxStrokeColor">@color/secondaryColor</item>
+        <item name="boxStrokeWidth">2dp</item>
+        <item name="android:textColor">@color/secondaryColor</item>
+        <item name="boxBackgroundColor">@color/primaryColor</item>
+        <item name="passwordToggleTint">@color/secondaryColor</item>
+        <item name="hintAnimationEnabled">false</item>
     </style>
 </resources>
