--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -90,7 +90,7 @@
 
         <LinearLayout
             android:id="@+id/mobilelinear"
-            android:layout_width="380dp"
+            android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_margin="15dp"
             app:layout_constraintTop_toBottomOf="@+id/etEmail"
@@ -102,9 +102,9 @@
                 android:id="@+id/etMobileFormat"
                 android:focusable="false"
                 style="@style/EditText"
-                android:layout_width="110dp"
-                android:layout_height="48dp"
-                android:layout_marginEnd="6dp"
+                android:layout_width="90dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="12dp"
                 android:hint="+62"
                 android:enabled="false"
                 android:imeOptions="actionNext"
@@ -114,9 +114,9 @@
                 android:id="@+id/etMobile"
                 android:focusable="false"
                 style="@style/EditText"
-                android:layout_width="260dp"
-                android:layout_height="48dp"
-                android:hint="Email"
+                android:layout_width="270dp"
+                android:layout_height="match_parent"
+                android:hint="Mobile"
                 android:imeOptions="actionNext"
                 android:textSize="14sp" />
 
