--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -92,29 +92,31 @@
             android:id="@+id/mobilelinear"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_margin="15dp"
-            app:layout_constraintTop_toBottomOf="@+id/etEmail"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/etEmail">
 
             <EditText
                 android:id="@+id/etMobileFormat"
-                android:focusable="false"
                 style="@style/EditText"
                 android:layout_width="90dp"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="12dp"
-                android:hint="+62"
+                android:layout_marginEnd="8dp"
                 android:enabled="false"
+                android:focusable="false"
+                android:hint="+62"
                 android:imeOptions="actionNext"
-                android:textSize="14sp" />
+                android:textSize="14sp"/>
 
             <com.example.capstoneproject.ui.customView.mobileEditText
                 android:id="@+id/etMobile"
                 android:focusable="false"
                 style="@style/EditText"
-                android:layout_width="270dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Mobile"
                 android:imeOptions="actionNext"
