--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="white">#FEFEFE</color>
     <color name="blue">#01A1DD</color>
     <color name="red">#FF7272</color>
+    <color name="yellow">#F47A35</color>
     <color name="secwhite">#e8e8e8</color>
     <color name="secblack">#616060</color>
     <color name="lightGray">#ECECEC</color>
