--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,4 +24,8 @@
         <item name="passwordToggleTint">@color/secondaryColor</item>
         <item name="hintAnimationEnabled">false</item>
     </style>
+    <style name="tab_text" parent="Widget.Design.TabLayout">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 </resources>
