--- a/app/src/main/res/layout/activity_otpemail.xml
+++ b/app/src/main/res/layout/activity_otpemail.xml
@@ -11,16 +11,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginHorizontal="32dp"
             android:layout_marginTop="160dp"
-            android:layout_marginEnd="16dp"
             android:fontFamily="@font/montserrat_bold"
             android:text="Verification"
             android:textColor="@color/secondaryColor"
@@ -33,8 +31,7 @@
             android:id="@+id/textViewlogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginHorizontal="32dp"
             android:backgroundTint="@color/secPrimary"
             android:fontFamily="@font/montserrat_semi_bold"
             android:text="Enter the OTP code we've sent to your email address:"
@@ -47,7 +44,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="13sp"
+            android:textSize="14sp"
             android:gravity="center"
             android:id="@+id/showEmail"
             android:layout_marginTop="20dp"
