--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -103,14 +103,16 @@
             <EditText
                 android:id="@+id/etMobileFormat"
                 style="@style/EditText"
-                android:layout_width="90dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="8dp"
                 android:enabled="false"
                 android:focusable="false"
+                android:paddingHorizontal="24dp"
+                android:textStyle="bold"
                 android:hint="+62"
                 android:imeOptions="actionNext"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
 
             <com.example.capstoneproject.ui.customView.mobileEditText
                 android:id="@+id/etMobile"
