--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -101,6 +101,7 @@
                                     android:layout_marginEnd="8dp"
                                     android:fontFamily="@font/montserrat_semi_bold"
                                     android:text="WiFi"
+                                    android:textSize="14sp"
                                     android:textColor="@android:color/white" />
 
                                 <ImageView
@@ -136,6 +137,7 @@
                                     android:layout_marginEnd="8dp"
                                     android:fontFamily="@font/montserrat_semi_bold"
                                     android:text="Traffic Usage"
+                                    android:textSize="14sp"
                                     android:textColor="@android:color/white" />
 
                                 <ImageView
