--- a/app/src/main/res/drawable/cardview_border_disabled.xml
+++ b/app/src/main/res/drawable/cardview_border_disabled.xml
@@ -1,10 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/contentColor" />
+    <solid android:color="@color/disabled" />
 
-    <padding
-        android:left="22dp"
-        android:right="22dp"/>
     <corners android:radius="25dp" />
 </shape>
