--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -152,7 +152,6 @@
                     </androidx.appcompat.widget.LinearLayoutCompat>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-
                 <TextView
                     android:id="@+id/tvCurrentPlan"
                     android:layout_width="wrap_content"
@@ -171,8 +170,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:background="@drawable/item_bg"
-                    app:layout_constraintTop_toBottomOf="@+id/tvCurrentPlan"
-                    tools:layout_editor_absoluteX="-186dp">
+                    app:layout_constraintTop_toBottomOf="@+id/tvCurrentPlan">
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
@@ -186,7 +184,6 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
-
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/card_package"
@@ -371,6 +368,20 @@
                             </androidx.appcompat.widget.LinearLayoutCompat>
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </androidx.cardview.widget.CardView>
+
+                    <ProgressBar
+                        android:id="@+id/progressBar"
+                        style="?android:attr/progressBarStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        tools:visibility="visible"
+                        android:translationZ="2dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
@@ -390,9 +401,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:background="@drawable/item_bg"
-                    app:layout_constraintTop_toBottomOf="@+id/tvNewsArticle"
-                    tools:layout_editor_absoluteX="-186dp">
-
+                    app:layout_constraintTop_toBottomOf="@+id/tvNewsArticle">
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_articles"
@@ -402,7 +411,6 @@
                         android:layout_marginBottom="16dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="1.0"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -412,4 +420,17 @@
         </ScrollView>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_chat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/contentColor"
+        app:tint="@color/white"
+        android:src="@drawable/icon_customer_service"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
